chore: set JVM heap to 3g and enable GC logging in Dockerfile